[tool.poetry]
name = "server"
version = "1.0.0"
description = "A realtime bike rental system"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/dragorhast/server"
authors = ["Alexander Lyon <arlyon@me.com>"]

[tool.poetry.dependencies]
python = "^3.7"
# aiohttp
aiohttp = "^3.0"
aiohttp-cors = "^0.7"
idna-ssl = "^1.1"
aiohttp-apispec = "^2.2"
#uvloop
uvloop = "^0.14"
#sentry
sentry-sdk = "^0.14"
aiohttp-sentry = "^0.6"
# data
marshmallow = "^3.5"
apispec = "^3.3"
tortoise-orm = {git = "https://github.com/arlyon/tortoise-orm.git", branch = "gis"}
asyncpg = "^0.21"
aiosqlite = "^0.11"
contextvars = "^2.4"
shapely = {version = "^1.7", extras = ["vectorized"]}
# misc
hyperion-cli = "^1.0"
aiobreaker = "^1.0"
dateparser = "^0.7"
pynacl = "^1.3"
python-jose = "^3.1"
cryptography = "^2.8"
aiomonitor = "^0.4"
firebase-admin = "^3.2"
haversine = "^2.2"
more-itertools = "^8.2"
stripe = "^2.48.0"

[tool.poetry.dev-dependencies]
# test
attrs = "^19.3"
pytest = "^4.6"
pytest-cov = "^2.10"
faker = "^4.1"
codecov = "^2.1"
pylint = "^2.5"
mypy = "^0.782"
safety = "^1.9"
bandit = "^1.6"
pytest-mock = "^3.1"
# docs
sphinx = "^3.1"
sphinx-autobuild = "^0.7"
sphinx-rtd-theme = "^0.5"
sphinx-autodoc-typehints = "^1.11"
sphinxcontrib-mermaid = "^0.4"
# build tooling
taskipy = "^1.2.1"

[tool.poetry.scripts]
server = "server.__main__:run"
bikes = "fakebike.__main__:run"

[tool.taskipy.tasks]
test = "python -m pytest --cov=server tests"
typecheck = "python -m mypy server"
lint = "python -m pylint server"
safety = "python -m safety check"
bandit = "python -m bandit -r check"
docs = "sphinx-build docs/source docs/build"
bikes = "python -m fakebike"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

